syntax = "proto3";

option csharp_namespace = "Discount.gRPC.Protos";
import "google/api/annotations.proto";

service DiscountProtoService {
	// Get Discount by Product name
	rpc GetDiscount (GetDiscountRequest) returns (CouponModel) {
		option(google.api.http) = {
			get: "/api/v1/Discount/{productName}"
		};
	}

	// Create new Discount
	rpc CreateDiscount (CreateDiscountRequest) returns (CouponModel) {
		option(google.api.http) = {
			post: "/api/v1/Discount",
			body: "coupon"
		};
	}

	// Update Existing Discount
	rpc UpdateDiscount (UpdateDiscountRequest) returns (CouponModel) {
		option(google.api.http) = {
			put: "/api/v1/Discount",
			body: "coupon"
		};
	}

	// Delete Discount by Product name
	rpc DeleteDiscount (DeleteDiscountRequest) returns (DeleteDiscountResponse) {
		option(google.api.http) = {
			delete: "/api/v1/Discount/{productName}"
		};
	}
}

message GetDiscountRequest {
	string productName = 1;	
}

message CouponModel {
	int32 id = 1;
	string productName = 2;
	string description = 3;
	int32 amount = 4;
}

message CreateDiscountRequest {
	CouponModel coupon = 1;
}

message UpdateDiscountRequest {
	CouponModel coupon = 1;
}

message DeleteDiscountRequest {
	string productName = 1;
}

message DeleteDiscountResponse {
	bool success = 1;
}